testcases/compiler2015/Phase2/CompileError/lvalue3-5110379024-wuhang.c
/** REMARK: After an &-operation, the result does not have an address.
 *
**/

struct a{int q;};
int main()
{
    struct a a;
    (&a)=0;
}
